# geom-imbalance

./: .gitignore  DRIFT_DETECTION_README.md  FINAL_TEST_REPORT.md  FULL_EXPERIMENTS_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PAPER_FIGURES_GUIDE.md  QUICK_START.md  README.md  README_DRIFT_DETECTION.md  TEST_RESULTS.md  labelshift_drift_requirements.txt  requirements.txt  test_comprehensive.py  test_drift_detection.py  test_fast_validation.py  test_scenario4_diagnosis.py
geom_imbalance_experiments/: PAPER_READY_RESULTS.md  README.md  check_results_summary.py  create_paper_results.py  final_paper_results.py  generate_final_results.py  pyproject.toml  setup.py  test_exp5_debug.py  test_functionality.py  test_functionality_simple.py  test_run_all.py
geom_imbalance_experiments/notebooks/: 00_run_all_and_make_figures.ipynb
geom_imbalance_experiments/outputs/: experiment_log.txt  paper_results_summary.txt
geom_imbalance_experiments/outputs/metadata/: checks.json  exp1_metadata.json  exp2_metadata.json  exp3_metadata.json  exp4_metadata.json  exp5_metadata.json
geom_imbalance_experiments/outputs/tables/: exp1_results.csv  exp2_results.csv  exp3_results.csv  exp3_stability.csv  exp4_results.csv  exp5_results.csv
geom_imbalance_experiments/scripts/: run_all.py  run_exp1.py  run_exp2.py  run_exp3.py  run_exp4.py  run_exp5.py
geom_imbalance_experiments/src/geomimb/: config.py  seeds.py
geom_imbalance_experiments/src/geomimb/data/: realdata.py  shifts.py  synthetic.py
geom_imbalance_experiments/src/geomimb/experiments/: exp1_label_shift_offset.py  (+4 more)
(+40 files in other folders)
