[project]
name = "geom_imbalance_experiments"
version = "1.0.0"
description = "Experiments for 'A Geometric Theory of Learning Under Class Imbalance'"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "xgboost>=1.5.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
smote = [
    "imbalanced-learn>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src.geomimb", "src.geomimb.data", "src.geomimb.models", "src.geomimb.metrics",
            "src.geomimb.experiments", "src.geomimb.plotting", "src.geomimb.utils"]

[tool.setuptools.package-dir]
"" = "."